--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "html-react-parser": "^3.0.12",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
