--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@next/font": "^13.0.7",
@@ -25,6 +27,10 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/styled-components": "^5.1.26",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0"
   }
 }
